--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.13.1",
     "react-easy-crop": "^2.1.2",
     "react-file-icon": "^0.2.0",
+    "react-icons": "^3.10.0",
     "react-intl": "^3.12.0",
     "react-ionicons": "^3.1.4",
     "react-player": "^1.15.3",
