--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-easy-crop": "^2.1.2",
     "react-file-icon": "^0.2.0",
     "react-icons": "^3.10.0",
+    "react-infinite-scroll-component": "^5.0.5",
     "react-intl": "^3.12.0",
     "react-ionicons": "^3.1.4",
     "react-player": "^1.15.3",
