--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-spring": "^8.0.27",
+    "react-string-replace": "^0.4.4",
     "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
