--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "draft-js-hashtag-plugin": "^2.0.4",
     "draft-js-linkify-plugin": "^2.0.2",
     "draft-js-list-plugin": "^1.0.2",
+    "draft-js-mention-plugin": "^3.1.5",
     "draft-js-plugins-editor": "^3.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
