--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "clsx": "^1.1.0",
     "date-fns": "^2.13.0",
     "draft-js": "^0.11.5",
+    "draft-js-buttons": "^2.0.2",
     "draft-js-hashtag-plugin": "^2.0.4",
+    "draft-js-inline-toolbar-plugin": "^3.0.1",
     "draft-js-linkify-plugin": "^2.0.2",
     "draft-js-list-plugin": "^1.0.2",
     "draft-js-mention-plugin": "^3.1.5",
