feat: add react-dropzone and polished dependencies

--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "html-react-parser": "^0.10.3",
     "jest-enzyme": "^7.1.2",
     "lodash": "^4.17.15",
+    "polished": "^3.6.5",
     "prop-types": "^15.7.2",
     "rc-slider": "^9.2.4",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-big-calendar": "^0.24.6",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.3",
     "react-easy-crop": "^2.1.2",
     "react-file-icon": "^0.2.0",
     "react-icons": "^3.10.0",
