--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "shortid": "^2.2.15",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.0",
     "yup": "^0.28.5"
   },
