--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "draft-js-list-plugin": "^1.0.2",
     "draft-js-mention-plugin": "^3.1.5",
     "draft-js-plugins-editor": "^3.0.0",
+    "emoji-picker-react": "^3.2.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "html-react-parser": "^0.10.3",
@@ -45,6 +46,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "shortid": "^2.2.15",
+    "snake-ui": "^1.0.3",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.0",
     "yup": "^0.28.5"
@@ -83,13 +85,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.js": [
