--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "shortid": "^2.2.15",
-    "snake-ui": "^1.0.3",
+    "snake-ui": "^1.0.5",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.0",
     "yup": "^0.28.5"
@@ -69,6 +69,9 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.4",
+    "@types/yup": "^0.29.8",
+    "@types/lodash": "^4.14.162",
+    "@types/react-big-calendar": "^0.24.7",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "cz-conventional-changelog": "^3.2.0",
