--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "ancaphub-client",
   "version": "0.1.0",
   "dependencies": {
-    "@unform/core": "^2.1.0",
-    "@unform/web": "^2.1.0",
-    "axios": "^0.21.2",
-    "clsx": "^1.1.0",
-    "date-fns": "^2.13.0",
-    "draft-js": "^0.11.5",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
+    "axios": "^0.26.0",
+    "clsx": "^1.1.1",
+    "date-fns": "^2.28.0",
+    "draft-js": "^0.11.7",
     "draft-js-buttons": "^2.0.2",
     "draft-js-hashtag-plugin": "^2.0.4",
     "draft-js-inline-toolbar-plugin": "^3.0.1",
@@ -15,33 +15,33 @@
     "draft-js-list-plugin": "^1.0.2",
     "draft-js-mention-plugin": "^3.1.5",
     "draft-js-plugins-editor": "^3.0.0",
-    "emoji-picker-react": "^3.2.3",
-    "html-react-parser": "^0.10.3",
-    "lodash": "^4.17.15",
+    "emoji-picker-react": "^3.5.1",
+    "html-react-parser": "^1.4.8",
+    "lodash": "^4.17.21",
     "polished": "^4.1.4",
-    "rc-slider": "^9.2.4",
-    "react": "^16.13.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "react-big-calendar": "^0.24.6",
-    "react-dom": "^16.13.1",
-    "react-dropzone": "^11.0.3",
-    "react-easy-crop": "^2.1.2",
-    "react-file-icon": "^0.2.0",
-    "react-icons": "^3.10.0",
-    "react-infinite-scroll-component": "^5.0.5",
-    "react-intl": "^3.12.0",
-    "react-player": "^1.15.3",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
+    "rc-slider": "^10.0.0-alpha.4",
+    "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-big-calendar": "^0.39.0",
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.4",
+    "react-easy-crop": "^4.0.3",
+    "react-file-icon": "^1.1.0",
+    "react-icons": "^4.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-intl": "^5.24.6",
+    "react-player": "^2.9.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "react-spring": "^8.0.27",
-    "redux": "^4.0.5",
+    "react-spring": "^9.4.3",
+    "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
-    "shortid": "^2.2.15",
-    "snake-ui": "^1.0.10",
-    "socket.io-client": "^2.3.0",
-    "styled-components": "^5.1.0",
-    "yup": "^0.28.5"
+    "shortid": "^2.2.16",
+    "snake-ui": "^1.0.11",
+    "socket.io-client": "^4.4.1",
+    "styled-components": "^5.3.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,21 +50,21 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@types/draft-js": "^0.10.44",
-    "@types/lodash": "^4.14.162",
-    "@types/node": "^14.11.8",
-    "@types/react": "^16.9.52",
-    "@types/react-beautiful-dnd": "^13.0.0",
-    "@types/react-big-calendar": "^0.24.7",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-file-icon": "^1.0.0",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/draft-js": "^0.11.9",
+    "@types/lodash": "^4.14.179",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-big-calendar": "^0.36.2",
+    "@types/react-dom": "^17.0.13",
+    "@types/react-file-icon": "^1.0.1",
+    "@types/react-redux": "^7.1.23",
+    "@types/react-router-dom": "^5.3.3",
     "@types/shortid": "^0.0.29",
-    "@types/socket.io-client": "^1.4.34",
-    "@types/styled-components": "^5.1.4",
-    "@types/yup": "^0.29.8",
-    "typescript": "^4.0.3"
+    "@types/socket.io-client": "^3.0.0",
+    "@types/styled-components": "^5.1.24",
+    "@types/yup": "^0.29.13",
+    "typescript": "^4.6.2"
   },
   "browserslist": {
     "production": [
